--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form>
-        
+        <fieldset>
           <label for="fname">First name:</label><br>
           <input type="text" id="fname" name="fname" placeholder ="First name"><br>
           <label for="lname">Last name:</label><br>
@@ -49,8 +49,9 @@
                           <label for="Dub_or_sub">Dubbed or Subbed Anime?</label><br>
                           <input type="submit" name="Subbed" value="Sub"/><br>
                           <input type="submit" name="Dubbed" value="Dub"/><br>
-                           <input type="submit" name="both" value="Both"/>
-                
+                           <input type="submit" name="both" value="Both"/><br><br><br>
+                           <input type="submit" value="Submit">
+          </fieldset>
     </form>
 </body>
 </html>
